--- a/app/css/home.css
+++ b/app/css/home.css
@@ -61,3 +61,52 @@
 	font-size: 14px;
 	font-weight: 600;
 }
+
+#extract_archive {
+	position:absolute;
+	min-height: 100px;
+	min-width: 800px;
+	width: 100%;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	display:none;
+	opacity: 1;
+	text-align:left;
+	background:transparent;
+	z-index: 120;
+}
+
+.extract_archive_content {
+	position:relative;
+	top: 270px;
+	left : 100px;
+	margin: auto;
+	width: 340px;
+	height: 80px;
+	padding: 6px 6px 6px 6px;
+	background-color:#72ca2a;
+	border:solid;
+	border-radius:4px;
+	border-width:3px;
+	border-color:#72ca2a;
+}
+
+.input-extractarchive{
+	position:relative;
+	top:10px;
+	left:0px;
+	width:260px;
+	background-color:#4d4d4d;
+	border-style:none;
+	line-height:38px;
+	border-radius:5px;
+	color:#fff;
+}
+
+.newArchiveLabel {
+	font-size: 14px;
+	font-weight: 600;
+}
