--- a/app/css/filebrowser.css
+++ b/app/css/filebrowser.css
@@ -7,14 +7,37 @@
 	border-width:3px;
 	border-color:#72ca2a;
 	background-color:#292929;
-	width:400px;
-	min-width:400px;
+	width:380px;
+	min-width:380px;
 	height:580px;
 	overflow:auto;
 }
 
+.filebrowser_pane_left{
+	float:left;
+	width:380px;
+	text-align:right;
+	padding-right:5px;
+}
+
+.filebrowser_pane_right{
+	float:right;
+	width:380px;
+	text-align:left;
+	padding-left:5px;
+}
+
 .tab_filebrowser{
-	margin-top:-95px;
+	text-align:center;
+	width:800px;
+	min-width:300px;
+	height:100px;
+	margin-left:auto;
+	margin-right:auto;
+	padding-top:0px;
+	background-color:transparent;
+	border:none;
+	margin-top:-125px;
 }
 
 .fileitem{
@@ -23,8 +46,7 @@
 	border-width:2px;
 	border-radius:5px;
 	border-color:transparent;
-	height:70px;
-
+	height:30px;
 }
 
 .fileitem:active, .fileitem:focus, .fileitem:checked{
@@ -33,9 +55,9 @@
 
 
 .filelabel{
-	line-height:70px;
+	line-height:30px;
 	text-align:left;
-	font-size:18px;
+	font-size:16px;
 	color:#fff;
 	vertical-align:top;
 	/* float:left; */
@@ -63,41 +85,58 @@
 
 }
 
+.rename_box {
+	text-align:left;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .back{
-	width:65px;
-	height:65px;
+	width:32px;
+	height:32px;
 	display:inline-block;
 	background-image:url("../image/icon_back.png");
+	background-repeat:no-repeat;
+	background-size: contain;
 }
 
 .dir{
-	width:65px;
-	height:65px;
+	width:32px;
+	height:32px;
 	display:inline-block;
 	background-image:url("../image/icon_dir.png");
+	background-repeat:no-repeat;
+	background-size: contain;
 }
 
+/*
 .file{
 	width:65px;
 	height:65px;
 	display:inline-block;
 	background-image:url("../image/icon_file.png");
 }
+*/
 
 .dustbox{
 	margin-right:0px;
 	margin-top:auto;
-	width:65px;
-	height:65px;
+	width:32px;
+	height:32px;
 	background-image:url("../image/icon_dustbox.png");
+	background-repeat:no-repeat;
+	background-size: contain;
 	z-index:100;
 	float:right;
 }
 .dustbox_ok{
 	margin-right:0px;
-	width:65px;
-	height:65px;
+	width:32px;
+	height:32px;
 	background-image:url("../image/icon_dustbox_ok.png");
+	background-repeat:no-repeat;
+	background-size: contain;
 	z-index:100;
 	float:right;
 }
@@ -106,14 +145,13 @@
 }
 
 .select_host select{
-	width:422px;
+	width:380px;
 	height:30px;
 	padding-left:2px;
 	line-height:32px;
 	vertical-align:middle;
 	color:#fff;
 	font-size:16px;
-	font-family:sans-serif;
 	text-align:left;
 	background-color:transparent;
 	-webkit-appearance:none;
@@ -138,11 +176,13 @@
 	border-style:solid;
 	border-width:2px;
 	border-color:#72ca2a;
-	width:405px;
-	height:36px;
+	width:380px;
+	height:30px;
 	overflow:hidden;
-	margin-bottom:30px;
-	background:url("../image/button_bg_selector.png") no-repeat 370px 5px rgba(20,20,20,1.0);
+	margin-bottom:5px;
+	background:url("../image/button_bg_selector.png") no-repeat 350px 5px rgba(20,20,20,1.0);
+	background-repeat:no-repeat;
+	background-size: 24px 24px;
     background-color:#4d4d4d;
 }
 
@@ -158,7 +198,7 @@
 	height:480px;
 	position:absolute;
 	z-index:100;
-	top:390px;
+	top:200px;
 	display:none;
 }
 
@@ -191,7 +231,6 @@
 	text-align:left;
 	color:#fff;
 	font-size:30px;
-	font-family:sans-serif;
 	position:relative;
 	padding-top:32px;
 	padding-left:124px;
@@ -201,52 +240,57 @@
 
 
 .filepath{
-	font-size:18px;
+	font-size:16px;
 	color:#4d4d4d;
 	text-align:left;
-	margin-bottom:15px;
+	margin-bottom:5px;
 	overflow:auto;
 	word-break:break-all;
 }
 
 /* history browser */
 .historybrowser{
-	margin:auto;
-	margin-left:0px;
-	border:solid;
-	border-radius:20px;
-	border-width:12px;
-	border-color:#72ca2a;
-	background-color:#292929;
 	width:400px;
 	min-width:400px;
-	height:412px;
+	height:400px;
+	border:solid;
+	border-radius:2px;
+	border-width:3px;
+	border-color:#72ca2a;
+	margin-top:5px;
+	margin-left:20px;
+	padding:10px;
+	background-color:#292929;
+	float:left;
 	overflow:scroll;
+}
+
+.historybrowser_buttons{
+	margin-top:260px;
 }
 
 /* file dialog (popup) */
 .filedialog{
-	width:500px;
-	min-width:500px;
+	width:400px;
+	min-width:400px;
 	height:400px;
 	border-radius:2px;
-	border-width:2px;
+	border-width:3px;
 	border-color:#72ca2a;
-	margin-left:60px;
-	padding:15px;
+	margin-left:20px;
+	padding:10px;
 	text-align:center;
 	background-color:#292929;
 	float:left;
 }
 
 .filepath_filedialog{
-	font-family:sans-serif;
 	font-size:16px;
 	color:#fff;
 	text-align:left;
 	width:500px;
 	min-width:500px;
-	margin-left:60px;
+	margin-left:30px;
 	margin-top:5px;
 	margin-bottom:5px;
 	/* selection */
@@ -259,15 +303,14 @@
 }
 
 .input_filedialog{
-	font-family:sans-serif;
 	font-size:16px;
 	color:#fff;
 	text-align:left;
-	width:500px;
-	min-width:500px;
-	margin-left:60px;
-	margin-top:42px;
-	margin-bottom:30px;
+	width:400px;
+	min-width:400px;
+	margin-left:20px;
+	margin-top:10px;
+	margin-bottom:10px;
 	/* selection */
 	-webkit-touch-callout:text;
 	-webkit-user-select: text;
@@ -278,7 +321,19 @@
 }
 
 .buttons_dialog{
-	margin-top:200px;
+	margin-top:260px;
+}
+
+.registerhost_register_label {
+	position: relative;
+	left:10px;
+	top: -6px;
+}
+
+.registerhost_host_label {
+	position: relative;
+	left:-25px;
+	top: 5px;
 }
 /*---------*/
 
