--- a/app/css/editor_info_view.css
+++ b/app/css/editor_info_view.css
@@ -20,6 +20,13 @@
 	overflow:auto;
 }
 
+.info_project_title {
+	margin-left:35px;
+	text-align:left;
+	font-size:16px;
+	height:30px;
+}
+
 .info_text_area {
 	margin-left: 30px;
 	margin-right: 10px;
