--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -2,6 +2,15 @@
 * {
 	font-family:inherit;
 }
+*:not(input) {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 span.fontchange * {
 	font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
 }
