--- a/app/css/editor_node_view.css
+++ b/app/css/editor_node_view.css
@@ -48,11 +48,11 @@
 .nodePropertyTab
 {
 	background-color:rgba(100, 100, 100, 0.5);
-	position:absolute;
-	right:0px;
-	top:0px;
-	width:200px;
-	bottom:0px;
+	position:fixed;
+	right: 10px;
+	top: 115px;
+	bottom: 10px;
+	
 	overflow:auto;
 	z-index: 1;
 	
@@ -68,6 +68,7 @@
 	color : black;
 	display: table;
 	margin: 5px;
+	/*min-width: 90%;*/
 }
 
 .nodeKey2 {
@@ -138,6 +139,10 @@
 .nodePropertyTop
 {
 	background-color: #868686;
+}
+
+.nodeList{
+	margin: 5px;
 }
 
 /*
